--- a/client/src/main/resources/public/index.html
+++ b/client/src/main/resources/public/index.html
@@ -24,9 +24,6 @@
     <script src="https://npmcdn.com/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <link rel="stylesheet" href="https://npmcdn.com/angular-toastr/dist/angular-toastr.css" />
     <link rel="stylesheet" href="css/bootstrap-datetimepicker.min.css"/>
-    <script src="js/moment.min.js"></script>
-    <script src="js/bootstrap-datetimepicker.min.js" ></script>
-
     <link rel="stylesheet" href="css/style.css">
     <script src="js/angular-module.js"></script>
 </head>
@@ -58,27 +55,38 @@
                     <image src="img/snl-banner.png" style="width:100%" />
                 </div>
                 <div class="col-md-4">
-                    <div class ="home-btns">
+                    <div class="home-btns">
                         <div class="title">Snakes And Ladders</div>
                         <div>
                             <div class='input-group'>
-                                <input type='text' class="form-control" placeholder="Player 1" ng-model="appCtrl.player1"
+                                <input type='text' class="form-control" placeholder="Player 1 (You)" ng-model="appCtrl.player1"
                                        />
                             </div>
                             <div class='input-group'>
-                                <input type='text' class="form-control" placeholder="Player 2" ng-model="appCtrl.player2"
+                                <input type='text' class="form-control" placeholder="Player 2 (Opposition)" ng-model="appCtrl.player2"
                                        />
                             </div>
                         </div>
                         <button class="btn btn-primary" ng-click="appCtrl.startGame()">Start Game</button>
                         <button class="btn btn-secondary" ng-click="appCtrl.openCreateAccountModal()" style="float:right;">Create Gamer Account</button>
+
+                        <div style="margin-top: 80px;">
+                            <div class='input-group'>
+                                <input type='text' class="form-control" placeholder="Game Id" ng-model="appCtrl.gameId"
+                                />
+                            </div>
+                            <button class="btn btn-primary" ng-click="appCtrl.loadGame(appCtrl.gameId, 1)">Join Game As Player 1</button>
+                            <button class="btn btn-primary" ng-click="appCtrl.loadGame(appCtrl.gameId, 2)">Join Game As Player 2</button>
+                        </div>
                     </div>
+
+
                 </div>
                 <div class="col-md-1"></div>
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <div style="text-align: center; margin-top: -6px; font-size: 13px;">Powered by
+                    <div style="text-align: center; margin-top: 6px; font-size: 13px;">Powered by
                         <image class="power-by" src="img/corda.png" alt="Corda"/>
                     </div>
                 </div>
@@ -91,21 +99,26 @@
                 <div class="col-md-6 offset-1">
                     <div class="board-wrapper">
                         <img src="img/game-board.jpg" style="height:100%;width: 100%;">
-                        <div class="player"></div>
-                        <div class="player" style="background: blue; left: 30px;"></div>
+                        <div class="player" id="player1"></div>
+                        <div class="player" id="player2" style="background: blue; left: 30px;"></div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="row">
+                        <div class="box-wrapper col-md-12" style="height: auto;">
+                            <strong>Game Id:</strong> {{appCtrl.game.linearId.id}}
+                        </div>
+                    </div>
+                    <div class="row">
                         <div class="box-wrapper col-md-5">
                             <div style="font-size: 20px;color: red;font-weight: bold;">
-                                Player1
+                                {{appCtrl.game.player1}}
                             </div>
                             <div style="float: right;margin-right: 15px;font-size: 58px;">1</div>
                         </div>
                         <div class="box-wrapper col-md-5 offset-1">
                             <div style="font-size: 20px;color: blue;font-weight: bold;">
-                                Player2
+                                {{appCtrl.game.player2}}
                             </div>
                             <div style="float: right;margin-right: 15px;font-size: 58px;">1</div>
                         </div>
@@ -113,6 +126,7 @@
                     <div class="row" style="margin-top: 50px;">
                         <div class="col-md-12" style="text-align: center; margin-bottom: 20px;">
                             <button class="btn btn-lg btn-primary" ng-click="appCtrl.rollDice()">Roll The Dice</button>
+                            <button class="btn btn-lg btn-primary" ng-click="appCtrl.rollDice()">Move</button>
                         </div>
                         <div class="col-md-12">
                             <div class="dice-wrapper">
@@ -158,13 +172,18 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row" style="margin-top: 50px;">
+                        <div class="col-md-12">
+                            <p>You rolled 2</p>
+                        </div>
+                    </div>
                 </div>
             </div>
 
         </div>
     </div>
 
-    <!-- Create Asset Modal -->
+    <!-- Create Account Modal -->
     <script type="text/ng-template" id="createAccountModal.html">
         <div class="modal-header">
             <h3 class="modal-title">Create Gamer Account</h3>
@@ -182,172 +201,6 @@
         <div class="modal-footer">
             <button ng-click="createAccountModalCtrl.cancel()" type="button" class="btn btn-default">Close</button>
             <button ng-click="createAccountModalCtrl.create()" type="button" class="btn btn-primary">Create</button>
-        </div>
-    </script>
-
-    <!-- Issue Cash Modal -->
-    <script type="text/ng-template" id="issueCashModal.html">
-        <div class="modal-header">
-            <h3 class="modal-title">Issue Cash</h3>
-        </div>
-        <div class="modal-body">
-            <div class='input-group'>
-                <input type='text' class="form-control" placeholder="Amount"
-                       ng-model="cashModalCtrl.form.amount"/>
-                <span class="input-group-addon">
-                    <i class="fas fa-dollar-sign"></i>
-                </span>
-            </div>
-            <div class="form-group">
-                <label for="partySelector">Issue to</label>
-                <select class="form-control" id="partySelector" ng-model="cashModalCtrl.form.party">
-                    <option value="PartyA">Party A</option>
-                    <option value="PartyB">Party B</option>
-                    <option value="PartyC">Party C</option>
-                </select>
-            </div>
-        </div>
-        <div class="modal-footer">
-            <button ng-click="cashModalCtrl.cancel()" type="button" class="btn btn-default">Close</button>
-            <button ng-click="cashModalCtrl.issueCash()" type="button" class="btn btn-primary">Issue</button>
-        </div>
-    </script>
-
-
-
-    <!-- Auction Modal -->
-
-    <script type="text/ng-template" id="auctionModal.html">
-        <div class="modal-header">
-            <h3 class="modal-title">{{auctionModalCtrl.asset.state.data.title}}</h3>
-            <div class="timer">Remaining Time:
-                {{auctionModalCtrl.timer.days}} days {{auctionModalCtrl.timer.hours}} hours
-                {{auctionModalCtrl.timer.minutes}} mins {{auctionModalCtrl.timer.seconds}} secs
-            </div>
-        </div>
-        <div class="modal-body">
-            <div class="row">
-                <div class="col-md-6" style="display: flex; justify-content: center; align-items: center;">
-                    <image src="{{auctionModalCtrl.asset.state.data.imageUrl}}" style="width: 100%" />
-                </div>
-                <div class="col-md-6">
-                    <p>{{auctionModalCtrl.asset.state.data.description}}</p>
-                    <hr>
-
-                    <div>
-                        <h3 style="margin-bottom: 15px;">Place a Bid</h3>
-                        <div class="form-group" style="margin-bottom: 0;">
-                            <div style="margin-top: -5px; margin-bottom: 15px;">
-                                <div>Auctioned By: <span style="color: #444444;font-family: serif;">{{auctionModalCtrl.auction.state.data.auctioneer}}</span></div>
-                                <div>Base Price: <span style="color: #444444;font-family: serif;">{{auctionModalCtrl.auction.state.data.basePrice}}</span></div>
-                                <div>Highest Bid:
-                                    <span style="color: #444444;font-family: serif;">
-                                        {{auctionModalCtrl.auction.state.data.highestBid?auctionModalCtrl.auction.state.data.highestBid : 'No Bids'}}
-                                    </span>
-                                </div>
-                                <div>Highest Bidder:
-                                    <span style="color: #444444;font-family: serif;">
-                                        {{auctionModalCtrl.auction.state.data.highestBidder? auctionModalCtrl.auction.state.data.highestBidder : 'N/A'}}
-                                    </span>
-                                </div>
-                            </div>
-                            <div ng-if="auctionModalCtrl.auction.state.data.active">
-                                <div class='input-group'>
-                                    <input type='text' class="form-control" placeholder="Bid Amount"
-                                       ng-model="auctionModalCtrl.bidForm.amount"/>
-                                    <span class="input-group-addon">
-                                        <i class="fas fa-dollar-sign"></i>
-                                    </span>
-                                </div>
-                                <div style="text-align: right;">
-                                    <button ng-click="auctionModalCtrl.cancel()" type="button" class="btn btn-default">Close</button>
-                                    <button ng-click="auctionModalCtrl.placeBid(auctionModalCtrl.auction.state.data.auctionId)"
-                                        type="button" class="btn btn-primary">Place Bid</button>
-                                </div>
-                            </div>
-                            <div ng-if="!auctionModalCtrl.auction.state.data.active">
-                                <hr>
-                                <div style="color: #DF0B1B; font-size: 16px; font-weight: bold;">
-                                    Auction has ended
-                                </div>
-                                <div style="text-align: right;">
-                                    <button ng-click="auctionModalCtrl.cancel()" type="button" class="btn btn-default">Close</button>
-                                    <button ng-if="auctionModalCtrl.auction.state.data.winner && auctionModalCtrl.auction.state.data.winner.includes(auctionModalCtrl.activeParty)"
-                                            ng-click="auctionModalCtrl.payAndSettle()"
-                                            type="button" class="btn btn-primary">Pay & Settle</button>
-                                    <button ng-if="!auctionModalCtrl.auction.state.data.winner && auctionModalCtrl.auction.state.data.auctioneer.includes(auctionModalCtrl.activeParty)"
-                                            ng-click="auctionModalCtrl.exit()"
-                                            type="button" class="btn btn-primary">Delete</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </script>
-
-    <!-- Asset Modal -->
-    <script type="text/ng-template" id="assetModal.html">
-        <div class="modal-header">
-            <h3 class="modal-title">{{assetModalCtrl.asset.state.data.title}}</h3>
-        </div>
-        <div class="modal-body">
-            <div class="row">
-                <div class="col-md-6" style="display: flex; justify-content: center; align-items: center;">
-                    <image src="{{assetModalCtrl.asset.state.data.imageUrl}}" style="width: 100%" />
-                </div>
-                <div class="col-md-6">
-                    <p>{{assetModalCtrl.asset.state.data.description}}</p>
-                    <hr>
-
-                    <div>
-                        <h3 style="margin-bottom: 15px;">Put on Auction</h3>
-                        <div class="form-group" style="margin-bottom: 0;">
-                            <div class='input-group'>
-                                <input type='text' class="form-control" placeholder="Base Price"
-                                       ng-model="assetModalCtrl.createAuctionForm.basePrice"/>
-                                <span class="input-group-addon">
-                                    <i class="fas fa-dollar-sign"></i>
-                                </span>
-                            </div>
-                            <div class='input-group date' id='datetimepicker'>
-                                <input type='text' class="form-control" placeholder="Auction Deadline"
-                                       ng-model="assetModalCtrl.createAuctionForm.deadline"/>
-                                <span class="input-group-addon">
-                                    <i class="fas fa-calendar"></i>
-                                </span>
-                            </div>
-                            <div style="text-align: right;">
-                                <button ng-click="assetModalCtrl.cancel()" type="button" class="btn btn-default">Close</button>
-                                <button ng-click="assetModalCtrl.createAuction(assetModalCtrl.asset.state.data.linearId)"
-                                        type="button" class="btn btn-primary">Create Auction</button>
-                            </div>
-                        </div>
-                        <script type="text/javascript">
-                            jQuery(document).ready(function($) {
-                            if (window.jQuery().datetimepicker) {
-                                $('#datetimepicker').datetimepicker({
-                                    format: 'DD-MM-YYYY hh:mm:ss A',
-
-                                    icons: {
-                                        time: 'fa fa-clock',
-                                        date: 'fa fa-calendar',
-                                        up: 'fa fa-chevron-up',
-                                        down: 'fa fa-chevron-down',
-                                        previous: 'fa fa-chevron-left',
-                                        next: 'fa fa-chevron-right',
-                                        today: 'fa fa-check',
-                                        clear: 'fa fa-trash',
-                                        close: 'fa fa-times'
-                                    }
-                                });
-                            }
-                        });
-                        </script>
-                    </div>
-                </div>
-            </div>
         </div>
     </script>
 
