Board Player Movement

--- a/client/src/main/resources/public/index.html
+++ b/client/src/main/resources/public/index.html
@@ -114,13 +114,13 @@
                             <div style="font-size: 20px;color: red;font-weight: bold;">
                                 {{appCtrl.game.player1}}
                             </div>
-                            <div style="float: right;margin-right: 15px;font-size: 58px;">1</div>
+                            <div style="float: right;margin-right: 15px;font-size: 58px;">{{appCtrl.game.player1Pos}}</div>
                         </div>
                         <div class="box-wrapper col-md-5 offset-1">
                             <div style="font-size: 20px;color: blue;font-weight: bold;">
                                 {{appCtrl.game.player2}}
                             </div>
-                            <div style="float: right;margin-right: 15px;font-size: 58px;">1</div>
+                            <div style="float: right;margin-right: 15px;font-size: 58px;">{{appCtrl.game.player2Pos}}</div>
                         </div>
                     </div>
                     <div class="row" style="margin-top: 50px;">
